1999-04-20  bertrand <Bertrand.Guiheneuf@inria.fr>
	
	* camel/camel-store.h: now CamelStore inherits from
	CamelService.

	* camel/camel-service.c (camel_service_class_init): 
	basic abstract service class.

1999-04-19  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/README: added some (few) explanations.

1999-04-18  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-store.[ch]: started implementation
	* camel/camel-folder.c (camel_folder_get_type): typo
	uncommented the store related code.
	(camel_folder_create): enable som store relted code. 
	Not finished. Have to define public methods first.

	* camel/camel-log.h: some explanation about the 
	log system

1999-04-18   bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-folder.c: 
	(camel_folder_create): implemented (partially)
	have to write CamelStore before finishing it.

	* camel/camel-folder.h (CamelFolder): added full_name field
	(CamelFolderClass): added set/get_full_name methods

1999-04-18  bertrand <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-folder.c: some work
	* camel/camel-log.c: log system for camel
	* camel/gstring-util.c: some utilities for GString objects
	

1999-04-18  bertrand <Bertrand.Guiheneuf@inria.fr>

	* autogen.sh (PKG_NAME): groomf -> gnome-mailer
