@@ -1,0 +1,71 @@
+/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
+/* camel-mh-folder.c : Abstract class for an email folder */
+
+/* 
+ *
+ * Copyright (C) 1999 Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr> .
+ *
+ * This program is free software; you can redistribute it and/or 
+ * modify it under the terms of the GNU General Public License as 
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * USA
+ */
+
+#include "camel-mh-folder.h"
+
+static CamelMhFolderClass *camel_mh_folder_parent_class=NULL;
+
+/* Returns the class for a CamelMhFolder */
+#define CMHF_CLASS(so) CAMEL_MH_FOLDER_CLASS (GTK_OBJECT(so)->klass)
+
+
+static void
+camel_mh_folder_class_init (CamelMhFolderClass *camel_mh_folder_class)
+{
+	camel_mh_folder_parent_class = gtk_type_class (camel_folder_get_type ());
+	
+	/* virtual method definition */
+	/* virtual method overload */
+}
+
+
+
+
+
+
+
+GtkType
+camel_mh_folder_get_type (void)
+{
+	static GtkType camel_mh_folder_type = 0;
+	
+	if (!camel_mh_folder_type)	{
+		GtkTypeInfo camel_mh_folder_info =	
+		{
+			"CamelMhFolder",
+			sizeof (CamelFolder),
+			sizeof (CamelFolderClass),
+			(GtkClassInitFunc) camel_mh_folder_class_init,
+			(GtkObjectInitFunc) NULL,
+				/* reserved_1 */ NULL,
+				/* reserved_2 */ NULL,
+			(GtkClassInitFunc) NULL,
+		};
+		
+		camel_mh_folder_type = gtk_type_unique (gtk_object_get_type (), &camel_mh_folder_info);
+	}
+	
+	return camel_mh_folder_type;
+}
+
+
