@@ -46,6 +46,8 @@ Makefile
 macros/Makefile
 po/Makefile.in
 camel/Makefile
+camel/providers/Makefile
+camel/providers/MH/Makefile
 devel-docs/Makefile
 devel-docs/camel/Makefile
 ])
